# poi_sim

./: .gitattributes  .gitignore  README.md  pyproject.toml
notebook-dev/: simulation.ipynb
notebook-eda/: Check_data.ipynb  データ確認.ipynb  機械学習手法による予測.ipynb  正解データ分析.ipynb  調布市以外のデータを確認_20250926.ipynb
src/: current_folder_tree.ipynb  population_prepocess.ipynb  preprocessed.ipynb
src/notebook-dev/: run_sim.ipynb  run_sim_ver2.ipynb  run_sim_ver3.ipynb  run_sim_ver4.ipynb  run_sim_ver4_2_一部同化.ipynb  run_sim_ver4_3.ipynb
src/notebook-dev/outputs/result_20260116_ALL/: README.txt  config.json
src/notebook-dev/outputs/result_20260116_スタジアム/: README.txt  config.json
src/notebook-dev/outputs/result_20260116_住宅地/: README.txt  config.json
src/notebook-dev/outputs/result_20260116_住宅地-スタジアム/: README.txt  config.json
src/notebook-dev/outputs/result_20260116_調布駅/: README.txt  config.json
src/notebook-dev/outputs/result_20260116_調布駅-スタジアム/: README.txt  config.json
src/notebook-dev/outputs/result_20260116_調布駅-住宅地/: README.txt  config.json
src/notebook-dev/outputs/result_20260116_調布駅-住宅地-スタジアム/: README.txt  config.json
src/notebook-eda/: processedデータ基本情報確認.ipynb  合成人口データフィルタリング処理分析.ipynb  機械学習手法による予測.ipynb  正解データ分析.ipynb  正解データ分析_yamada.ipynb  調布市以外のデータを確認_20250926.ipynb  調布市合成人口データ分析.ipynb  阪上結果の確認.ipynb
